--- a/streamscanner/src/main/webapp/WEB-INF/web.xml
+++ b/streamscanner/src/main/webapp/WEB-INF/web.xml
@@ -6,18 +6,23 @@
         metadata-complete="false"
         version="3.1">
 
-    <display-name>Wicket Examples</display-name>
-    <filter>
-        <filter-name>WicketApplication</filter-name>
-        <filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>
-        <init-param>
-            <param-name>applicationClassName</param-name>
-            <param-value>com.olegchir.streamscanner.WicketApplication</param-value>
-        </init-param>
-    </filter>
-    <filter-mapping>
-        <filter-name>WicketApplication</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
+    <!-- !!!-->
+    <!-- PLEASE NOTE: WE USE SERVELET 3.0 INITIALIZER INSTEAD OF THIS WEB.XML, SO WEB.XML IS EMPTY-->
+    <!-- !!!-->
+
+
+    <!--<display-name>Wicket Examples</display-name>-->
+    <!--<filter>-->
+        <!--<filter-name>WicketApplication</filter-name>-->
+        <!--<filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>-->
+        <!--<init-param>-->
+            <!--<param-name>applicationClassName</param-name>-->
+            <!--<param-value>com.olegchir.streamscanner.init.WicketApplication</param-value>-->
+        <!--</init-param>-->
+    <!--</filter>-->
+    <!--<filter-mapping>-->
+        <!--<filter-name>WicketApplication</filter-name>-->
+        <!--<url-pattern>/*</url-pattern>-->
+    <!--</filter-mapping>-->
 
 </web-app>
